--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,69 @@
+# Compiled source #
+###################
+*.com
+*.class
 *.dll
-*.pdb
-*.cache
+*.exe
+*.o
+*.so
+
+# Packages #
+############
+# it's better to unpack these files and commit the raw source
+# git has its own built in compression methods
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+
+# Logs and databases #
+######################
+*.log
+#*.sql
+*.sqlite
+
+# OS generated files #
+######################
+.DS_Store?
+ehthumbs.db
+[Ii]con?
+[Tt]humbs.db
+
+# .NET Specific Folders #
+#########################
+[Oo]bj
+[Oo]bj/*
+[Bb]in
+[Bb]in/*
+deploy
+deploy/*
+_ReSharper.*
+*.csproj.user
+*.Resharper.user
+*.resharper
 *.suo
-packages
-Web.MyTonikSpace/node_modules
-Web.MyTonikSpace/dist
-**/bin
-**/obj
-Web.MyTonikSpace/App_Start/Assets
-*.ide
-.vs/*
-tools/*
+*.cache
+~$*
+*.licx
+*/obj
+
+#  Pro Power Tools Document Tab Well Tracking #
+###############################################
+*.docstates
+
+# VS Source Control information #
+#################################
+*.vspscc
+*.vssscc
+
+
+# Includes #
+############
+!lib/*.dll
+!lib/*.xml
+!/packages/*/lib/*.dll
+!/packages/*/lib/*/*.dll
